# Service

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
docs/: Configuration.md  Queue.md
services/: http_configuration.h  http_fail.cpp  http_fail.h  http_listener.cpp  http_listener.h  http_request.cpp  http_request.h  http_session.cpp  http_session.h  queue_configuration.h  queue_task.h
